--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -25,7 +25,7 @@
       </div>
 
        <div class="form-group">
-        <%= f.submit "Sign up" , class: "btn btn-primary" %>
+        <%= f.submit "Sign me up" , class: "btn btn-primary" %>
       </div>
     <% end %>
   </div>
