--- a/app/views/pins/index.html.erb
+++ b/app/views/pins/index.html.erb
@@ -5,6 +5,7 @@
 <table>
   <thead>
     <tr>
+      <th>Image</th>
       <th>Descriptions</th>
       <th>UserID</th>
       <th colspan="3"></th>
@@ -14,6 +15,7 @@
   <tbody>
     <% @pins.each do |pin| %>
       <tr>
+      <td><%= image_tag pin.image.url(:thumb) %></td>  
         <td><%= pin.descriptions %></td>        
         <td><%= pin.user.email if pin.user%></td>
         <td><%= link_to 'Show', pin %></td>
