--- a/app/views/pins/show.html.erb
+++ b/app/views/pins/show.html.erb
@@ -7,9 +7,9 @@
 			</div>
 			<div class="panel-body">
 				<p><%= @pin.descriptions %></p>
-        <p><strong><%= @pin.user.email if @pin.user%></strong></p>
+        <p><strong><%= @pin.user.name if @pin.user%></strong></p>
 				<% if @pin.user == current_user && current_user!=nil%>
-					<%= link_to  edit_pin_path(@pin) do %>  
+					<%= link_to edit_pin_path(@pin) do %>  
            <span class="glyphicon glyphicon-edit"></span> edit
 					<%end%>
 				<% end%>
